# reader

./: .gitignore  CMakeLists.txt  README.md
batch/: DT_Reader_batch.sh  batch_run.sh  run.spy  run_batch.spy
histograms/: FlowStatistics.root  QualityAccuranceHistos.root  SelectorStatisticsHistos.root
painter/: ChannelErrorPainter.C  ErrorPainter.C  FlowPainter.C
src/: Centrality.cxx  Centrality.h  EventQA.cxx  EventQA.h  Flow.cxx  Flow.h  Flow.root  Flow3SE.cxx  Flow3SE.h  HADES_constants.h  Qvector.cxx  Qvector.h  Qvector2SE.cxx  Qvector2SE.h  Qvector3SE.cxx  Qvector3SE.h  Reader.cxx  Reader.h  Selector.cxx  Selector.h  TrackQA.cxx  TrackQA.h  main.cxx  rootlogon.C  script.C
